deploy-qc-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-poll-dev
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-poll-dev
  template:
    metadata:
      labels:
        app: slack-poll-dev
    spec:
      containers:
        - name: slack-poll-dev
          image: danghung/slack-poll:dev
          imagePullPolicy: Always
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Mi"
              cpu: "1m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          ports:
            - containerPort: 3000
