deploy-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-poll
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-poll
  template:
    metadata:
      labels:
        app: slack-poll
    spec:
      containers:
        - name: slack-poll
          image: danghung/slack-poll
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Mi"
              cpu: "1m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: slack-poll
  namespace: default
  labels:
    app: slack-poll
spec:
  selector:
    app: slack-poll
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-poll
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: slack-poll.danghung.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slack-poll
                port:
                  number: 3000
