deploy-qc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-poll-dev
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-poll-dev
  template:
    metadata:
      labels:
        app: slack-poll-dev
    spec:
      containers:
        - name: slack-poll-dev
          image: danghung/slack-poll:dev
          imagePullPolicy: Always
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Mi"
              cpu: "1m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: slack-poll-dev
  namespace: default
  labels:
    app: slack-poll-dev
spec:
  selector:
    app: slack-poll-dev
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-poll-dev
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: slack-poll-dev.danghung.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slack-poll-dev
                port:
                  number: 3000
